[package]
name = "maat_vulkan"
version = "0.1.0"
authors = ["Lilith645 <lilith@inet-sys.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vk = { version = "0.5.1", package = "vk-sys" }
image = "0.22.0"
winit = "0.22.2"
shared_library = "0.1.7"
lazy_static = "1.4.0"
libc = "0.2.44"
raw-window-handle = { version = "0.3.3" }

[target.'cfg(all(unix, not(target_os = "android"), not(target_os = "macos")))'.dependencies]
wayland-client = "=0.23.6"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.17"
cocoa = "0.20.0"
objc = "0.2.7"
moltenvk_deps = "0.1.0"

[dependencies.cgmath]
version = "0.17.0"
features = ["swizzle"]
